--- a/app/src/main/res/layout/schedule.xml
+++ b/app/src/main/res/layout/schedule.xml
@@ -3,4 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <CalendarView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+
+    </CalendarView>
 </LinearLayout>
