--- a/app/src/main/res/layout/teamer_info.xml
+++ b/app/src/main/res/layout/teamer_info.xml
@@ -28,12 +28,14 @@
             android:layout_weight="1"
             android:textSize="16dp"
             />
+        </LinearLayout>
 
-    </LinearLayout>
         <ListView
+            android:nestedScrollingEnabled="true"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/teamerInfo"/>
+
 
     </LinearLayout>
 
