--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,5 +6,6 @@
         android:id="@+id/exit"
         android:orderInCategory="100"
         android:title="@string/exit"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        />
 </menu>
