--- a/app/src/main/res/layout/record.xml
+++ b/app/src/main/res/layout/record.xml
@@ -1,6 +1,123 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:id="@+id/recordToolbar"/>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/recordRL"
+            android:layout_gravity="center"
+            android:background="@drawable/volleyball_record_court"
+            >
+
+            <ImageView
+                android:id="@+id/red3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/user_red"
+                android:visibility="invisible"
+                />
+            <ImageView
+                android:id="@+id/blue3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/user_blue"
+                android:visibility="invisible"
+                />
+            <ImageView
+                android:id="@+id/black3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/user_black"
+                android:visibility="invisible"
+                />
+            <ImageView
+                android:id="@+id/black4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/user_black"
+                android:visibility="invisible"
+                />
+            <ImageView
+                android:id="@+id/blue4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/user_blue"
+                android:visibility="invisible"
+                />
+            <ImageView
+                android:id="@+id/red4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/user_red"
+                android:visibility="invisible"
+                />
+        </RelativeLayout>
+    </LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabLeftRedo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|left"
+        android:src="@drawable/refresh"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="80dp"
+        app:fabSize="mini"
+        app:elevation="20dp"
+        app:backgroundTint="#fff000"
+        app:pressedTranslationZ="20dp"/>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabLeftPoint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|left"
+        android:src="@drawable/plus"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="24dp"
+        android:layout_marginLeft="24dp"
+        app:elevation="30dp"
+        app:backgroundTint="#E0E0E0"
+        app:pressedTranslationZ="20dp"/>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabRightRedo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:src="@drawable/refresh"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="80dp"
+        app:fabSize="mini"
+        app:elevation="20dp"
+        app:backgroundTint="#fff000"
+        app:pressedTranslationZ="20dp"/>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabRightPoint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:src="@drawable/plus"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="24dp"
+        android:layout_marginRight="24dp"
+        app:elevation="30dp"
+        app:backgroundTint="#E0E0E0"
+        app:pressedTranslationZ="20dp"/>
+
+</android.support.design.widget.CoordinatorLayout>
