--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,59 +6,39 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context="com.example.user.volleyball.MainActivity">
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
+
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>/>
+        android:orientation="vertical">
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/title"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        android:id="@+id/toolbar"
+        app:layout_collapseMode="pin"/>
 
-        <android.support.design.widget.AppBarLayout
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            android:id="@+id/abl">
-
-            <android.support.design.widget.CollapsingToolbarLayout
-                android:id="@+id/collapsing_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fitsSystemWindows="true"
-                app:contentScrim="?attr/colorPrimary"
-                app:expandedTitleMarginEnd="64dp"
-                app:expandedTitleMarginStart="48dp"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed">
-                <ImageView
-                    android:id="@+id/background"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:scaleType="centerCrop"
-                    android:fitsSystemWindows="true"
-                    app:layout_collapseMode="parallax"
-                    android:src="@drawable/volleyball_sky"/>
-        <android.support.v7.widget.Toolbar
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            android:id="@+id/toolbar"
-            app:layout_collapseMode="pin"/>
-
-            </android.support.design.widget.CollapsingToolbarLayout>
-            <android.support.design.widget.TabLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/title"
-                android:layout_gravity="bottom"
-                app:tabMaxWidth="0dp"
-                app:tabMode="fixed"
-                app:tabGravity="fill"
-                android:layout_alignParentBottom="true"
-                app:tabSelectedTextColor="@color/tabtext"
-                app:tabIndicatorHeight="0dp"
-                android:id="@+id/tabs"/>
-        </android.support.design.widget.AppBarLayout>
-
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_below="@id/toolbar"
+        android:layout_above="@id/tabs"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+    <android.support.design.widget.TabLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:tabMaxWidth="0dp"
+        app:tabMode="fixed"
+        app:tabGravity="fill"
+        android:layout_alignParentBottom="true"
+        app:tabSelectedTextColor="@color/tabtext"
+        app:tabIndicatorHeight="0dp"
+        android:id="@+id/tabs"/>
+    </RelativeLayout>
 
 
 </android.support.design.widget.CoordinatorLayout>
