--- a/app/src/main/res/layout/teamer_info.xml
+++ b/app/src/main/res/layout/teamer_info.xml
@@ -45,11 +45,11 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|right"
+        android:layout_gravity="bottom|right"
         android:src="@drawable/plus"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp"
         android:layout_marginRight="24dp"
         app:elevation="30dp"
         app:backgroundTint="#fff000"
