--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="title">#0abab5</color>
     <color name="tabtext">#CDFF0000</color>
     <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
 </resources>
