--- a/app/src/main/res/layout/update_record.xml
+++ b/app/src/main/res/layout/update_record.xml
@@ -4,12 +4,24 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     >
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvPlayer"
-        android:textSize="24dp"
-        />
+        android:orientation="horizontal">
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/myTeamPlayer"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/tvTitle"
+            android:text="@string/record_item"
+            android:textSize="24dp"
+            />
+    </LinearLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
