--- a/app/src/main/res/menu/record_menu.xml
+++ b/app/src/main/res/menu/record_menu.xml
@@ -3,10 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <item
+        android:id="@+id/recordName"
+        android:orderInCategory="100"
+        android:title="@string/team_fight"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/recordturn"
         android:orderInCategory="100"
         android:icon="@drawable/turn"
-        android:title="@string/user"
+        android:title="@string/turn"
         app:showAsAction="always" />
     <item
         android:id="@+id/recorduser"
@@ -47,7 +52,14 @@
         android:id="@+id/startType"
         android:orderInCategory="100"
         android:title="@string/start"
-        app:showAsAction="never" >
+        app:showAsAction="always" >
+        <menu>
+
+        <item
+            android:id="@+id/board"
+            android:orderInCategory="100"
+            android:title="@string/board"
+            app:showAsAction="never" >
         <menu>
 
             <item
@@ -61,6 +73,13 @@
                 android:title="@string/five"
                 app:showAsAction="always" />
 
+        </menu>
+        </item>
+            <item
+                android:id="@+id/allocate_player"
+                android:orderInCategory="100"
+                android:title="@string/allocate_player"
+                app:showAsAction="never"/>
         </menu>
     </item>
 
