--- a/app/src/main/res/layout/record.xml
+++ b/app/src/main/res/layout/record.xml
@@ -65,6 +65,20 @@
                 />
         </RelativeLayout>
     </LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:id="@+id/textScore1"
+        android:layout_marginStart="48dp"
+        android:layout_marginBottom="24dp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:id="@+id/textScore2"
+        android:layout_marginEnd="72dp"
+        android:layout_marginBottom="24dp"/>
 
 
 </android.support.design.widget.CoordinatorLayout>
