--- a/app/src/main/res/layout/date_list_layout.xml
+++ b/app/src/main/res/layout/date_list_layout.xml
@@ -5,21 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="15dp"
-    android:background="#aabbcc"
+    android:background="#000000"
     >
     <TextView
         android:id="@+id/recycler_view_test_item_person_name_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:background="#ccbbaa"
+        android:background="@color/title"
         />
     <TextView
         android:id="@+id/recycler_view_test_item_person_age_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="5dp"
-        android:background="#aaccbb"
+        android:background="@color/white"
         android:textSize="15sp"
         />
 </LinearLayout>
